checkpoint - setting down for now :)

--- a/scripts/ingest.ipynb
+++ b/scripts/ingest.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "81c0ad9c",
    "metadata": {},
    "outputs": [],
@@ -89,10 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "15f2b2c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspace/.venv/lib/python3.12/site-packages/torch/_inductor/compile_fx.py:236: UserWarning: TensorFloat32 tensor cores for float32 matrix multiplication available but not enabled. Consider setting `torch.set_float32_matmul_precision('high')` for better performance.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# meta-data\n",
     "meta = build_metadata_blurb(data)\n",
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "76dc240d",
    "metadata": {},
    "outputs": [],
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "257ec792",
    "metadata": {},
    "outputs": [],
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "id": "d5be645d",
    "metadata": {},
    "outputs": [],
@@ -164,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "id": "98eeb118",
    "metadata": {},
    "outputs": [
@@ -262,7 +271,7 @@
        "1045  On the morning of Jan. 18, 2003, Penny Sackett...  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
